[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'pytest-pythonhashseed'
authors = [{name = 'Michael Samoglyadov', email = 'mixas.sr@gmail.com'}]
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['env', 'envvars', 'pytest', 'pythonhashseed', 'testing']
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Testing',
]
dynamic = ['version', 'description']
dependencies = ['pytest>=3.0.0']
requires-python = '>=3.6'

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
    'pytest-ruff',
    'ruff==0.1.15',
]

[project.urls]
Homepage = 'https://github.com/mr-mixas/pytest-pythonhashseed'
Repository = 'https://github.com/mr-mixas/pytest-pythonhashseed.git'

[tool.pytest.ini_options]
addopts = """
          --cov=pytest_pythonhashseed \
          --cov-branch \
          --cov-fail-under=50 \
          --cov-report term-missing \
          --no-cov-on-fail \
          --ruff \
          --ruff-format \
          --verbosity=2 \
          """

[tool.ruff]
line-length = 79
select = ['ALL']
ignore = [
    'ANN',  # type annotations
]

[tool.ruff.extend-per-file-ignores]
'tests/*' = [
    'D',  # docstrings
    'S101',  # use of `assert`
]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
flake8-quotes.inline-quotes = 'single'

[project.entry-points.pytest11]
pythonhashseed = 'pytest_pythonhashseed'
